2014-08-19 Harri Pitkänen <hatapitk@iki.fi>
	* Switch to passive component registration.

2013-10-16 Harri Pitkänen <hatapitk@iki.fi>
	* Re-license under MPL 2.0 and GPLv3+.

2013-10-10 Harri Pitkänen <hatapitk@iki.fi>
	* Support grammar checkers and hyphenators for languages
	  other than Finnish.

2013-10-06 Harri Pitkänen <hatapitk@iki.fi>
	* Configuration option "Check capitalization" was removed in
	  LibreOffice 4.0, no need to support it anymore.

2013-09-17 Harri Pitkänen <hatapitk@iki.fi>
	* Support more languages for LibreOffice.

2013-07-29 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version number to 4.0.
	* LibreOffice 4.1 or later is now needed for building and running
	  the extension.

2013-06-26 Harri Pitkänen <hatapitk@iki.fi>
	* Avoid querying available spelling languages too often since
	  it's very slow for zhfst spellers.

2013-06-19 Harri Pitkänen <hatapitk@iki.fi>
	* Support more languages for LibreOffice.

2003-05-30 Sjur Moshagen <sjurnm@mac.com>
	* Support more languages for LibreOffice.

2013-01-06 Harri Pitkänen <hatapitk@iki.fi>
	* Support more languages for LibreOffice.

2012-10-27 Harri Pitkänen <hatapitk@iki.fi>
	* Support more languages for LibreOffice.

2012-02-01 Harri Pitkänen <hatapitk@iki.fi>
	* Add Komi language mappings.

2012-01-20 Harri Pitkänen <hatapitk@iki.fi>
	* Fix build with MSVC 2005.
	* Update license texts for standalone extension.

2012-01-19 Harri Pitkänen <hatapitk@iki.fi>
	* Add links to extended grammar checker help.

2012-01-02 Harri Pitkänen <hatapitk@iki.fi>
	* Avoid double delete of component objects.

2011-02-17 Tarja Lindfors <tarja@puimula.org>

	* New icon.

2011-02-16 Harri Pitkänen <hatapitk@iki.fi>

	* Specify English as the fallback language for settings dialog.

2011-02-05 Harri Pitkänen <hatapitk@iki.fi>

	* Rename source package to libreoffice-voikko.
	* Add new codes to language mapping table.
	* Remove -Werror from compiler flags, STLPort (used on 32 bit Linux)